BugId: 11764 Fixing overlap problems in RTE for IE
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@42349 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/EditPageLayout/css/core/editpage.scss
+++ b/extensions/wikia/EditPageLayout/css/core/editpage.scss
@@ -28,6 +28,7 @@
 }
 
 #EditPageEditor {
+	margin-top: 1px;
 	// source mode tweak
 	textarea {
 		@include epl-editorarea;
